<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn= "navigation_view">

        <group android:checkableBehavior="single">

            <item
                android:id="@+id/nav_drawer_home_doctor"
                android:icon="@drawable/baseline_person_24"
                android:title="@string/nav_perfil">
            </item>
            <item
                android:id="@+id/nav_drawer_casa_doctor"
                android:icon="@drawable/baseline_help_24"
                android:title="@string/nav_help">
            </item>
            <item
                android:id="@+id/nav_drawer_salir_doctor"
                android:icon="@drawable/baseline_close_24"
                android:title="@string/nav_cerrarsession">
            </item>
        </group>
    </menu>

