<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.uiDoctor.PerfilDoctorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/paciente"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_person_24"
                app:tint="@color/btnColor" />

            <TextView
                android:id="@+id/txtNombreDoctorDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Doctores"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailDoctorDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/Correo"
                android:textSize="16sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:columnCount="3"
                android:rowCount="8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_margin="8dp"
                    android:text="@string/Acercadeti" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_margin="8dp"
                    android:text="@string/nombre"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_margin="8dp"
                    android:text="@string/apellido"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_margin="8dp"
                    android:text="@string/Dni"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_margin="8dp"
                    android:text="@string/Telefono"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_margin="8dp"
                    android:text="@string/Direccion"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/txtNombreDoctoPerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_margin="8dp"
                    android:text="123"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txtapeliidoDoctorPerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:layout_margin="8dp"
                    android:text="@string/apellido"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txtDniDocentePerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:layout_margin="8dp"
                    android:text="@string/Dni"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txtTelefonoDocentePerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="2"
                    android:layout_margin="8dp"
                    android:text="@string/Telefono"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txtdireccionDocentePerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="2"
                    android:layout_margin="8dp"
                    android:text="@string/Direccion"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="6"
                    android:layout_column="0"
                    android:layout_margin="8dp"
                    android:text="@string/nav_Especialidad"/>
                <TextView
                    android:id="@+id/txtEspecialidadDoctorPerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="7"
                    android:layout_column="0"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:text="@string/Especialidades"
                    android:textColor="@color/black" />

            </GridLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>