<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".actividades.uiAdministrador.Doctor.AgregarDoctor_adminFragment">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            app:srcCompat="@drawable/logoparadise02" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:gravity="center"
                    android:paddingLeft="@dimen/pd_TextImpus"
                    android:text="@string/registrarDoctor"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtnombreDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/pd_TextImpus">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/Nombre" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtapellidoDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/pd_TextImpus">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/Apellido" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txttelefonoDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/pd_TextImpus">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/telefono"
                        android:inputType="number|phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtdniDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/pd_TextImpus">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/dni"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Seleccione una opción" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtcorreoDoctor"
                        android:layout_width="246dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/pd_TextImpus">


                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="213dp"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/Correo" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <Button
                        android:id="@+id/btngenerarCorreoDoctor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:backgroundTint="@color/btnColor"
                        android:text="@string/Generar"
                        android:textSize="10dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnRegistrarRegistroDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btnColor"

                    android:padding="@dimen/pd_TextImpus"
                    android:text="@string/Agregar" />

                <Button
                    android:id="@+id/btnCancelarDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btnColor"

                    android:onClick="procesoIniciar"
                    android:padding="@dimen/pd_TextImpus"
                    android:text="@string/Cancelar" />


            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</FrameLayout>